--- a/html/addtodo.html
+++ b/html/addtodo.html
@@ -11,7 +11,7 @@
 
 <div class="w-full bg-blue-900 flex h-20 justify-between px-10 ">
     <div class="text-blue-400 basis-1/2">
-        <a href="Todolist.html"><img src="../images/todo_logo.png" alt="" class="h-24 w-24"></a>
+        <a href="Todolist.html"><img src="../images/unnamed.png" alt="" class="h-24 w-24"></a>
     </div>
     <div class="basis-1/2 py-4" id="add" >
         <button class="bg-orange-500 px-12 py-3 mob1:px-8 mob1:basis-1/5 mob1:py-2 rounded "><span class="text-xl font-black">+</span> <span class="text-white font-black text-sm">Add todo</span></span></button>
