--- a/html/addtodo.html
+++ b/html/addtodo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/b8a9e78f6f.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="../src/output.css">
     <link rel="icon" href="../images/free-globe-396-433260.webp" type="image/x-icon/webp"/>
 </head>
 <body>
