--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
 
-    <div class="w-full bg-blue-900 flex h-20 justify-between px-10 ">
+    <div class="w-full bg-blue-900 flex h-20 gap-10 justify-between px-10 ">
         <div class="text-blue-400 basis-1/2">
             <img src="./images/unnamed.png" alt="" class="h-24 w-24">
         </div>
-        <div class="basis-1/2 py-4 mob1:basis-1/3 mob1:py-5" id="add" >
+        <div class="basis-1/2 py-4 mob1:basis-1/3 mob1:py-5 s" id="add" >
             <a href="./html/addtodo.html" class="bg-orange-500 px-12 py-3 mob1:px-8 mob1:basis-1/5 mob1:py-2 rounded "><span class="text-xl font-black">+</span> <span class="text-white font-black text-sm">Add todo</span></a>
         </div>
     </div>
