--- a/html/Todolist.html
+++ b/html/Todolist.html
@@ -15,7 +15,7 @@
             <img src="../images/unnamed.png" alt="" class="h-24 w-24">
         </div>
         <div class="basis-1/2 py-4 mob1:basis-1/3 mob1:py-5" id="add" >
-            <a href="addtodo.html" class="bg-orange-500 px-12 py-3 mob1:px-8 mob1:basis-1/5 mob1:py-2 rounded "><span class="text-xl font-black">+</span> <span class="text-white font-black text-sm">Add todo</span></a>
+            <a href="addtodo.html" class="bg-orange-500 px-12 py-3 mob1:px-8 mob1:basis-1/5 mob1:py-2 rounded float-right "><span class="text-xl font-black">+</span> <span class="text-white font-black text-sm">Add todo</span></a>
         </div>
     </div>
 
