--- a/html/addtodo.html
+++ b/html/addtodo.html
@@ -15,7 +15,7 @@
         <a href="Todolist.html"><img src="../images/unnamed.png" alt="" class="h-24 w-24"></a>
     </div>
     <div class="basis-1/2 py-4" id="add" >
-        <button class="bg-orange-500 px-12 py-3 mob1:px-8 mob1:basis-1/5 mob1:py-2 rounded float-right "><span class="text-xl font-black">+</span> <span class="text-white font-black text-sm">Add todo</span></span></button>
+        <button class="bg-orange-500 px-12 py-3 sm:px-8 sm:basis-1/5 sm:py-2 rounded float-right "><span class="text-xl font-black">+</span> <span class="text-white font-black text-sm">Add todo</span></span></button>
     </div>
 </div>
 
@@ -25,7 +25,7 @@
         <input type="text" name="" placeholder="Enter name" class="bg-gray-100 w-full p-4 border rounded">
 </form>
 <div class="basis-1/2" id="add" >
-    <button class="bg-orange-500 px-12 py-3 mob1:px-8 mob1:basis-1/5 mob1:py-2 rounded float-right "><span class="text-xl font-black">+</span> <span class="text-white font-black text-sm">Add todo</span></span></button>
+    <button class="bg-orange-500 px-12 py-3 sm:px-8 sm:basis-1/5 sm:py-2 rounded float-right "><span class="text-xl font-black">+</span> <span class="text-white font-black text-sm">Add todo</span></span></button>
 </div>
 </div>
 
