--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div class="text-blue-400 basis-1/2">
             <img src="./images/unnamed.png" alt="" class="h-24 w-24">
         </div>
-        <div class="basis-1/2 py-4 mob1:basis-1/3 mob1:py-5 s" id="add" >
-            <a href="./html/addtodo.html" class="bg-orange-500 px-12 py-3 mob1:px-8 mob1:basis-1/5 mob1:py-2 rounded float-right "><span class="text-xl font-black">+</span> <span class="text-white font-black text-sm">Add todo</span></a>
+        <div class="basis-1/2 py-4 sm:basis-1/3 sm:py-5 s" id="add" >
+            <a href="./html/addtodo.html" class="bg-orange-500 px-12 py-3 sm:px-8 sm:basis-1/5 sm   :py-2 rounded float-right "><span class="text-xl font-black">+</span> <span class="text-white font-black text-sm">Add todo</span></a>
         </div>
     </div>
 
