--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             },
             screens:{
                 'mob1': {'max': '425px'},
+                'sm-mob':{'max':'375px'},
                 'md':{'min': '767px'},
                 'lg':{'min': '992px'},
 
@@ -38,7 +39,7 @@
             <img src="./images/unnamed.png" alt="" class="h-24 w-24">
         </div>
         <div class="basis-1/2 py-4 mob1:basis-1/3 mob1:py-5 s" id="add" >
-            <a href="./html/addtodo.html" class="bg-orange-500 px-12 py-3 mob1:px-8 mob1:basis-1/5 mob1   :py-2 rounded float-right "><span class="text-xl font-black">+</span> <span class="text-white font-black text-mob1">Add todo</span></a>
+            <a href="./html/addtodo.html" class="bg-orange-500 px-12 py-3 mob1:px-8 mob1:basis-1/5 mob1:py-2 rounded float-right "><span class="text-xl font-black">+</span> <span class="text-white font-black text-mob1">Add todo</span></a>
         </div>
     </div>
 
