--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             },
             screens:{
                 'mob1': {'max': '425px'},
-                'sm-mob':{'max':'375px'},
+                // 'sm-mob':{'max':'375px'},
                 'md':{'min': '767px'},
                 'lg':{'min': '992px'},
 
