--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
               }
             },
             screens:{
-                'mob1': {'max': '425px'},
-                'mob2':{'max':'375px'},
-                'md':{'min': '767px'},
-                'lg':{'min': '992px'},
+                'mob1': {'max-width': '425px'},
+                'mob2':{'max-width':'375px'},
+                'md':{'min-width': '767px'},
+                'lg':{'min-width': '992px'},
 
             },
             zIndex:{
@@ -38,8 +38,8 @@
         <div class="text-blue-400 basis-1/2">
             <img src="./images/unnamed.png" alt="" class="h-24 w-24">
         </div>
-        <div class="basis-1/2 py-4 mob1:basis-1/3 mob1:py-5 mob2:py-2 mob2:basis-1/4" id="add" >
-            <a href="./html/addtodo.html" class="bg-orange-500 px-12 py-3 mob1:px-8 mob1:basis-1/5 mob1:py-2 rounded float-right mob2:px-2 mob2:py-2"><span class="text-xl font-black mob2:text-md">+</span> <span class="text-white font-black">Add todo</span></a>
+        <div class="basis-1/2 py-4 mob1:basis-1/3 mob1:py-5 " id="add" >
+            <a href="./html/addtodo.html" class="bg-orange-500 px-8 py-3 mob1:px-8 mob1:basis-1/5 mob1:py-2 rounded float-right"><span class="text-xl font-black mob2:text-md">+</span> <span class="text-white font-black">Add todo</span></a>
         </div>
     </div>
 
